--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <title>OptoPrimDB</title>
+
+  <!-- Grid.js theme -->
+  <link
+    href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css"
+    rel="stylesheet"
+  />
+
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -12,15 +19,15 @@
 
 <div class="about">
   <p>
-    <strong>OptoPrimDB</strong> is an early-stage, experimental database that aims to
-    collect and organize published optogenetics studies in non-human primates.
-    The goal is to provide a simple, searchable overview of the primate
-    optogenetics literature with standardized paper-level metadata.
+    <strong>OptoPrimDB</strong> is an early-stage, experimental database aiming to
+    collect and organize published optogenetics studies in primates.
+    It provides a searchable overview of the literature using standardized,
+    paper-level metadata.
   </p>
 
   <p class="status">
-    This is a very early testing version. The database is incomplete, entries may
-    change, and the structure is still evolving.
+    This is a very early testing version. The database is incomplete and the
+    structure is still evolving.
   </p>
 
   <p class="meta">
@@ -49,23 +56,13 @@
       class="search"
     />
 
-    <table>
-      <thead>
-        <tr>
-          <th class="year sortable">Year</th>
-          <th class="sortable">Title</th>
-          <th class="authors sortable">Authors</th>
-          <th class="journal sortable">Journal</th>
-          <th class="sortable">Species</th>
-          <th class="sortable">Opsins</th>
-        </tr>
-      </thead>
-      <tbody id="results"></tbody>
-    </table>
+    <div id="grid"></div>
   </main>
 
 </div>
 
+<script src="https://unpkg.com/gridjs/dist/gridjs.umd.js"></script>
 <script type="module" src="app.js"></script>
+
 </body>
 </html>
