--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="about">
   <p>
     <strong>OptoPrimDB</strong> is an early-stage, experimental database aiming to
-    collect and organize published optogenetics studies in primates.
+    collect and organize published optogenetics studies in primates, including humans.
     It provides a searchable overview of the literature using standardized,
     paper-level metadata.
   </p>
@@ -31,7 +31,7 @@
   </p>
 
   <p class="meta">
-    Created by Patrick Jendritza · Last updated: February 2026
+    Created by Patrick Jendritza · Last updated: 04. February 2026
   </p>
 </div>
 
